# flow_dotplot

./: pyproject.toml  tigit.ipynb
data/: TIGIT CYTO_MA 3202024.xlsx
