[tool.poetry]
name = "flow-dotplot"
version = "0.1.0"
description = ""
authors = ["Stefan <smig88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
